--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.21.4",
+    "sass": "^1.69.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "prebuild": "npm version patch && node ./src/versionUpdate.js",
+    "git": "git add . && git commit -m",
+    "updateVersion": "npm version patch && node ./src/versionUpdate.js",
+    "prebuild": "npm run updateVersion",
     "start": "react-scripts start",
     "build": "set INLINE_RUNTIME_CHUNK=false&&craco build",
     "test": "react-scripts test",
