--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "git": "git add . && git commit -m && git push origin",
-    "version": "node ./src/versionUpdate.js && npm version patch",
+    "version": "node ./src/versionUpdate.js",
     "prebuild": "npm run updateVersion",
     "start": "react-scripts start",
     "build": "set INLINE_RUNTIME_CHUNK=false&&craco build",
