--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
   "scripts": {
     "git": "git add . && git commit -m && git push origin",
     "version": "node ./src/versionUpdate.js",
-    "prebuild": "npm run version && npm run git -m",
+    "prebuild": "npm run version && npm run git --m:-m",
     "start": "react-scripts start",
     "build": "set INLINE_RUNTIME_CHUNK=false&&craco build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "mytest": "node ./src/versionUpdate.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
