--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "git": "git add . && git commit -m && git push origin",
+    "git": "git add . && git commit build && git push origin",
     "version": "node ./src/versionUpdate.js",
-    "prebuild": "npm run version && npm run git -m",
+    "prebuild": "npm run version && npm run git",
     "start": "react-scripts start",
     "build": "set INLINE_RUNTIME_CHUNK=false&&craco build",
     "test": "react-scripts test",
