--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "git": "git add . && git commit build && git push origin",
+    "git": "git add . && git commit 'build' && git push origin",
     "version": "node ./src/versionUpdate.js",
     "prebuild": "npm run version && npm run git",
     "start": "react-scripts start",
