--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "git": "git add . && git commit 'build' && git push origin",
     "version": "node ./src/versionUpdate.js",
-    "prebuild": "npm run version && npm run git",
+    "prebuild": "npm run version && git add . && git commit && git push origin",
     "start": "react-scripts start",
     "build": "set INLINE_RUNTIME_CHUNK=false&&craco build",
     "test": "react-scripts test",
