--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "React bookmarks",
   "description": "Save bookmarks and have insight into history",
-  "version": "1.3",
+  "version": "1.4",
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html",
@@ -26,5 +26,9 @@
         "./static/js/contentScript.js"
       ]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "service_worker.js",
+    "type": "module"
+  }
 }
